--- a/index.html
+++ b/index.html
@@ -5,8 +5,223 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Particle Life</title>
-  </head>
-  <body>
+    <style>
+      html, body {
+          margin: 0;
+          width: 100%;
+          height: 100%;
+          background: #000;
+          font-size: 16px;
+          font-family: sans-serif;
+      }
+
+      .controls {
+          position: fixed;
+          width: 20rem;
+          right: 1rem;
+          top: 0;
+          background-color: #333;
+          border-radius: 0 0 .25rem .25rem;
+          padding-top: .5rem;
+          z-index: 2;
+          transition: .4s ease-in-out;
+      }
+
+      .controls label {
+          display: flex;
+          padding: .25rem .5rem;
+          align-items: center;
+      }
+
+      .controls label span {
+          color: #fff;
+          font-size: .75rem;
+          flex-basis: 8rem;
+      }
+
+      .controls label input {
+          flex: 1;
+      }
+
+      .controls label button {
+          border: none;
+          background: #191919;
+          color: #fff;
+          border-radius: .25rem;
+          padding: .5rem;
+          margin-right: .5rem;
+      }
+
+      .controls h2 {
+          color: #fff;
+          font-size: 1rem;
+          margin: 0;
+          padding: .5rem;
+      }
+
+      .controls > button:last-child {
+          width: 100%;
+          color: #fff;
+          background: #222;
+          border: none;
+          padding: .25rem;
+      }
+
+
+      .controls > button:last-child:hover {
+          background: #444;
+          cursor: pointer;
+      }
+
+      .controls.hidden > button:last-child {
+          transform: rotateX(180deg);
+      }
+
+      .controls.hidden {
+          transform: translateY(calc(-100% + 20px));
+      }
+
+      .collapsible > *:not(h2) {
+          transition: height .4s;
+          overflow: hidden;
+          box-sizing: border-box;
+      }
+
+      .collapsible.collapsed > *:not(h2){
+          height: 0;
+          padding: 0;/* hack*/
+      }
+
+      .collapsible h2 {
+          position: relative;
+          cursor: pointer;
+      }
+
+      .collapsible h2::after{
+          display: block;
+          content: "⌃";
+          padding: .75rem;
+          color: #ccc;
+          position: absolute;
+          font-size: .75rem;
+          top: 0;
+          right: 0;
+      }
+
+      .collapsible h2:hover::after {
+          color: #fff;
+      }
+
+      @media only screen and (max-device-width: 800px) {
+          .collapsible.collapsed > *:not(h2){
+              height: auto;
+          }
+
+          .controls label {
+              padding: .25rem .5rem;
+          }
+
+          .collapsible:not(.collapsed) > *:not(h2) {
+              height: 0;
+              padding: 0;
+          }
+
+          .controls {
+              transform: translateY(calc(-100% + 20px));
+          }
+
+          .controls.hidden {
+              transform: translateY(0%);
+          }
+      }
+  </style>
+</head>
+<body>
+  <section class="controls">
+      <section class="collapsible">
+        <h2>Life settings</h2>
+
+        <!-- number of particles? same -->
+        <!-- influence scale? refresh? query string? -->
+        
+        <!-- size -->
+        <label>
+            <span>Size</span>
+            <input data-state="size" type="range" min="1" max="25" step="0.001" />
+        </label>
+
+        <!-- spread -->
+        <label>
+            <span>Spread</span>
+            <input data-state="spread" type="range" min="1" max="25" step="0.001" />
+        </label>
+
+        <!-- alphaScale -->
+        <label>
+            <span>alphaScale</span>
+            <input data-state="alphaScale" type="range" min="1" max="25" step="0.001" />
+        </label>
+      </section>
+
+      <section class="collapsible">
+          <h2>Color interactions</h2>
+
+          <label>
+              <span>Red -> Red</span>
+              <input data-state="rr" type="range" min="-1" max="1" step="0.001" />
+          </label>
+
+          <label>
+              <span>Red -> Green</span>
+              <input data-state="rg" type="range" min="-1" max="1" step="0.001" />
+          </label>
+
+          <label>
+              <span>Red -> Blue</span>
+              <input data-state="rb" type="range" min="-1" max="1" step="0.001" />
+          </label>
+
+          <label>
+              <span>Green -> Red</span>
+              <input data-state="gr" type="range" min="-1" max="1" step="0.001" />
+          </label>
+
+          <label>
+              <span>Green -> Green</span>
+              <input data-state="gg" type="range" min="-1" max="1" step="0.001" />
+          </label>
+
+          <label>
+              <span>Green -> Blue</span>
+              <input data-state="gb" type="range" min="-1" max="1" step="0.001" />
+          </label>
+
+          <label>
+              <span>Blue -> Red</span>
+              <input data-state="br" type="range" min="-1" max="1" step="0.001" />
+          </label>
+
+          <label>
+              <span>Blue -> Green</span>
+              <input data-state="bg" type="range" min="-1" max="1" step="0.001" />
+          </label>
+
+          <label>
+              <span>Blue -> Blue</span>
+              <input data-state="bb" type="range" min="-1" max="1" step="0.001" />
+          </label>
+      </section>
+
+      <button onClick="document.querySelector('.controls').classList.toggle('hidden')">⌃</button>
+  </section>
+  <script type="text/javascript">
+      Array.from(document.querySelectorAll(".collapsible h2")).forEach(e => {
+          e.addEventListener("click", (e) => {
+              const parentCollapsible = e.target.closest(".collapsible");
+              parentCollapsible.classList.toggle("collapsed")
+          })
+      })
+  </script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
