--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           border-radius: 0 0 .25rem .25rem;
           padding-top: .5rem;
           z-index: 2;
-          transition: .4s ease-in-out;
+          transition: .4s cubic-bezier(0.075, 0.82, 0.165, 1);
 
           text-transform: lowercase;
       }
@@ -152,10 +152,16 @@
       }
 
         .color {
-        display: inline-block;
-        width: .85em;
-        height: .85em;
-        border: 1px solid white;
+            display: block;
+            float: left;
+            width: 1em;
+            height: 1em;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+        }
+
+        .color + .color {
+            margin-left: .5em;
         }
 
         .color.red {
